<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/marvel_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/marvelCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/marvelAvatar"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            android:src="@color/black"
            tools:src="@color/black" />

        <LinearLayout
            android:id="@+id/ll_characters_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tarush" />

            <TextView
                android:id="@+id/comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/list_of_comics" />

            <LinearLayout
                android:id="@+id/comicNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avengers" />

                <TextView
                    android:id="@+id/second_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infinity_war" />

                <TextView
                    android:id="@+id/third_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanos" />

                <TextView
                    android:id="@+id/fourth_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four_rings" />

                <TextView
                    android:id="@+id/fifth_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cold_war" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>